# learn-polars

./: 4_expressions.py  README.md  pyproject.toml
concepts/: 2_data_structures.py  3_contexts.py  5_lazy_eager_api.py  6_streaming_api.py
expressions/: 10_lists_and_arrays.py  11_user_defined_functions.py  1_basic_operators.py  2_column_selections.py  3_functions.py  4_casting.py  5_strings.py  6_aggregation.py  7_missing_data.py  8_window_functions.py  9_folds.py
