[tool.poetry]
name = "learn-polars"
version = "0.1.0"
description = ""
authors = ["hduce <harry.duce@gmail.com>"]
readme = "README.md"
packages = [{include = "learn_polars"}]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.18.6"
numpy = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
